--- a/VirtualVineyard/pom.xml
+++ b/VirtualVineyard/pom.xml
@@ -66,7 +66,13 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>7.0.0-RC1</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
