--- a/VirtualVineyard/pom.xml
+++ b/VirtualVineyard/pom.xml
@@ -12,6 +12,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.2</junit.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -95,7 +98,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                bg.tu_varna.sit.virtualvineyard.Main
+                                bg.tu_varna.sit.virtualvineyard.GUI.Launcher
                             </mainClass>
                             <options>
                                 <option>--add-opens</option>
