--- a/VirtualVineyard/pom.xml
+++ b/VirtualVineyard/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>7.0.0-RC1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>3.0.0-alpha1</version>
+        </dependency>
     </dependencies>
 
 
