--- a/VirtualVineyard/pom.xml
+++ b/VirtualVineyard/pom.xml
@@ -107,6 +107,12 @@
             <version>5.20.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.20.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
