removed unused edit/update and Main

--- a/VirtualVineyard/pom.xml
+++ b/VirtualVineyard/pom.xml
@@ -90,11 +90,11 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>7.0.0-RC1</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>3.0.0-alpha1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.logging.log4j</groupId>-->
+<!--            <artifactId>log4j-core</artifactId>-->
+<!--            <version>3.0.0-alpha1</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
